<resources>
    <string name="app_name" translatable="false">FillField</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="googleMapTextDialog">Press on the marker to obtain directions</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Sign in with Google</string>
    <string name="title_text">Fill Field</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_login_button">Continue with Facebook</string>
    <string name="title_activity_facebook_login">Facebook Activity</string>
    <string name="fb_login_protocol_scheme">fb254099612085542</string>


    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_main">FillField</string>
    <string name="title_home">Nearest</string>
    <string name="title_profile">My profile</string>
    <string name="title_favourites_fields">Favourites</string>
    <string name="title_search_fields">Search</string>

    <string name="app_label">FillField</string>
    <string name="search_hint">Search fields...</string>
    <string name="search_title">Search</string>
    <string name="result_text">Results:</string>
    <string name="string_description">Enter the name of the city you are looking for</string>
    <string name="string_result">Results: </string>
    <string name="search_info">Enter the name of the field or its location </string>
    <string name="search_result_number">0</string>

    <!-- Fragment Titles -->
    <string name="favourite_fragment_title">Favourite Fields</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="my_reservations_fragment_title">My Reservations</string>
    <string name="my_fields_title">My Fields</string>

    <!-- Sample text of the cards-->
    <string name="card_image_description">Picture of the field</string>
    <string name="card_field_position">Location of the field</string>
    <string name="card_field_title">Title of the field</string>
    <string name="card_reserve">Reserve</string>
    <string name="card_view_map">View map</string>
    <string name="view_reservations_button">Reservations</string>

    <!-- Reservation dialog texts -->
    <string name="dialog_time_title">Choose an hour</string>
    <string name="dialog_time_pos_button">Confirm</string>
    <string name="dialog_time_neg_button">Cancel</string>
    <string name="dialog_no_hours_available">There are no hours available on this day</string>

    <!-- Reservation snackbar message and action button -->
    <string name="snackbar_reservation_done">Reservation made successfully</string>
    <string name="snackbar_view_action">View</string>

    <!-- Empty view text displayed when there are no fields to show. -->
    <string name="field_list_empty">There aren\'t any fields to show.</string>
    <string name="my_fields_empty">It seems you don\'t own any fields.</string>
    <string name="reservations_empty_view">There aren\'t any reservations to show on this day.</string>

    <!-- Text of contact button inside owner reservation list -->
    <string name="contact_button">Contact</string>

    <!-- User reservation card texts -->
    <string name="contact_owner_button">Contact owner</string>
    <string name="my_reservations_empty_view">You don\'t have any reservations.</string>

    <!-- Menu item text inside reservation list -->
    <string name="hide_calendar_menu_item">Hide calendar</string>
    <string name="show_calendar_menu_item">Show calendar</string>

    <!-- Profile strings -->
    <string name="my_fields">My fields</string>
    <string name="settings">Settings</string>
    <string name="sign_out_message">Do you really want to sign out?</string>
    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_confirm">Sign out</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder">Placeholder</string>
    <string name="home_screen">Home Screen:</string>
    <string name="contact_us">Do you want to add your soccer field? <a href="mailto:ale2nico.fillfield@gmail.com">Contact us!</a></string>
    <string name="profile_picture">Profile picture</string>
    <string name="my_reservations">My reservations</string>
    <string name="my_profile">My profile</string>
    <string name="search_fragment_title">Search</string>
    <string name="field_name">Field name</string>
    <string name="view_field_map">View map</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="firebase_fillfield_url">https://fillfield-bc48e.firebaseio.com/</string>
    <string name="fillfield">FillField</string>
    <string-array name="home_screen_preference">
        <item>Home</item>
        <item>Search</item>
        <item>Favourites</item>
    </string-array>


    <string-array name="query_suggestions">
        <item>Furniture</item>
        <item>Women Fashion</item>
        <item>Hotels</item>
        <item>Man Fashion</item>
        <item>Electronics Appliances</item>
    </string-array>


    <string name="specific_field">Field</string>
    <string name="reservation_time">Reservation time</string>
    <string name="final_dialog_reservation">Confirm reservation?</string>
    <string name="confirm_reservation">Confirm</string>
    <string name="sign_in_with_google">Sign in with \n Google </string>
    <string name="field_price">Field price</string>
    <string name="field_dimen">Field dimen</string>
    <string name="field_surface">Field surface</string>
    <string name="remember_reservation"><b>Remember your reservation!</b></string>
    <string name="remember_reservation_text">Your reservation is in an hour</string>
    <string name="reservation_success">Reservation made successfully</string>
    <string name="new_reservation"> <b>New Reservation!</b></string>
    <string name="new_reservation_text">Your field \"%1$s\" has a new reservation</string>

    <string name="facebook_app_id">254099612085542</string>
    <string name="share_action_text">Hi buddy, I have just reserved field \"%1$s\" for %2$s at %3$s. Do not miss!</string>
    <string name="share_via">Share via</string>
</resources>