<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:andorid="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    card_view:cardCornerRadius="4dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/field_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/reservation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_time"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/view_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_name"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/view_field_map"
        />
    <Button
        android:id="@+id/cancel_reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reservation_time"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/red"
        android:text="@string/cancel_reservation"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
</android.support.v7.widget.CardView>