<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/heart_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_favorite_outline_red_24dp" />

            <TextView
                android:id="@+id/field_num_hearts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="7" />

        </LinearLayout>

        <ImageView
            android:id="@+id/card_field_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_below="@id/heart_layout"
            android:scaleType="centerCrop"
            android:background="@color/cardview_shadow_start_color"
            android:contentDescription="@string/card_image_description" />

        <TextView
            android:id="@+id/card_field_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_field_image"
            android:layout_marginStart="@dimen/card_text_left_margin"
            android:layout_marginTop="@dimen/card_position_top_margin"
            android:text="@string/card_field_position"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/card_field_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_field_address"
            android:layout_marginStart="@dimen/card_text_left_margin"
            android:layout_marginTop="@dimen/card_element_top_margin"
            android:text="@string/card_field_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/action_1_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_surface"
            android:layout_toStartOf="@id/action_2_button"
            android:text="@string/card_reserve" />

        <Button
            android:id="@+id/action_2_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/card_field_image"
            android:layout_below="@id/field_surface"
            android:text="@string/card_view_map" />

        <TextView
            android:id="@+id/field_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/action_1_button"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/field_price"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/field_dimen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/card_field_address"
            android:layout_below="@+id/field_surface"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/field_dimen" />

        <TextView
            android:id="@+id/field_surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_field_name"
            android:layout_alignStart="@+id/card_field_address"
            android:layout_marginTop="@dimen/calendar_header_height"
            android:text="@string/field_surface" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
