<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:src="@drawable/background_profile"
        android:scaleType="centerCrop"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"

        app:civ_border_width="3dp"
        app:civ_border_color="#FFFFFFFF"

        android:id="@+id/profile_image"
        android:layout_width="200sp"
        android:layout_height="200sp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="-130sp"
        android:padding="20sp"
        android:scaleType="centerCrop"
        android:layout_alignBottom="@id/profile_background"
        android:layout_marginBottom="20sp"
        android:src="@drawable/no_profile_pic"
        />

    <TextView
        android:id="@+id/name_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textSize="40sp"
        android:layout_alignBottom="@id/profile_background"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/name_surname"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/my_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="50sp"
        android:text="@string/my_fields"
        />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/settings"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!--Layout for spinner preference -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/home_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_screen"
                android:tooltipText="@string/home_screen_tooltip"
                android:textSize="30sp"/>

            <Spinner
                android:id="@+id/home_screen_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

        </LinearLayout>


        <Button
            android:id="@+id/sign_out"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/sign_out"
            android:layout_marginTop="40sp"
            android:textSize="20sp"
            />
    </LinearLayout>

</RelativeLayout>


